--- a/src/assets/scss/components/_modals.scss
+++ b/src/assets/scss/components/_modals.scss
@@ -34,6 +34,12 @@
         }
     }
 
+    &#yandexLavkaModal {
+        .modal__heading, .modal__list{
+            width: calc(100% - 100px)
+        }
+    }
+
 
 
     &__dialog {
