--- a/src/views/templates/footer.ejs
+++ b/src/views/templates/footer.ejs
@@ -411,7 +411,7 @@
                     Как заказать ELXR в Яндекс.Лавке?
                 </div>
 
-                <ol class="modal__list">
+                <ul class="modal__list">
                     <li class="modal__list-item">
                         <span>1. Зайдите в Яндекс.Лавку</span>
                         <picture>
@@ -439,7 +439,7 @@
                             </defs>
                         </svg>
                     </li>
-                </ol>
+                </ul>
             </div>
         </div>
     </div>
