--- a/src/views/templates/footer.ejs
+++ b/src/views/templates/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="footer <%= title == 'Frontpage' ? 'fp-auto-height' : 'footer--gradient' %>">
+<footer class="footer <%= title == 'Frontpage' ? 'section fp-auto-height' : 'footer--gradient' %>" data-color="transparent">
 
     <div class="footer__slogan-ticker slogan-ticker">
         <div class="slogan-ticker__ticker">
@@ -87,7 +87,7 @@
 </footer>
 
 <% if (title == "Frontpage") { %>
-</div>
+<!-- </div> -->
 </div>
 </div>
 <% } %>
