--- a/src/assets/scss/pages/_research-page.scss
+++ b/src/assets/scss/pages/_research-page.scss
@@ -50,11 +50,13 @@
             align-items: center;
         }
 
-        svg {
+        svg, img {
             position: absolute;
             display: block;
             left: -46px;
             top: 8px;
+            height: 18px;
+            width: auto;
 
             @include media-breakpoint-down(md) {
                 position: static;
@@ -155,6 +157,10 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
+
+        p {
+            margin-bottom: 0;
+        }
 
         @include media-breakpoint-down(lg) {
             padding-left: rem(30px);
