--- a/src/views/templates/header.ejs
+++ b/src/views/templates/header.ejs
@@ -46,7 +46,7 @@
                     <a href="" class="header-menu__link">Инструкция по применению</a>
                 </li>
                 <li class="header-menu__item">
-                    <a href="" class="header-menu__link">Часто задаваемые вопросы</a>
+                    <a href="#faq" class="header-menu__link">Часто задаваемые вопросы</a>
                 </li>
                 <li class="header-menu__item">
                     <a href="" class="header-menu__link">Заказать</a>
